# ftm

./: .gitignore  Makefile  README.md  go.mod  go.sum  install.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
cmd/ftm/: main.go
desktop/: frontend-dist  main.go  package.json  wails.json
desktop/scripts/: copy-ftm.js
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/superpowers/plans/: 2025-03-16-tui-redesign.md
internal/app/: app.go  form.go  keyhandlers.go  keyhandlers_list.go  keyhandlers_settings.go  model.go  model_types.go  model_view.go  styles.go  update.go  view.go
internal/app/ui/: theme.go
internal/clipboard/: clipboard.go
internal/config/: config.go  tunnel.go
internal/i18n/: embed.go  helpers.go  i18n.go
internal/i18n/locales/: en.yaml  es.yaml
internal/notifications/: notification_darwin.go  notification_windows.go
internal/process/: logbuffer.go  managed.go  manager.go
internal/providers/: base_downloader.go  downloader.go  installer.go  interface.go
internal/providers/bore/: bore.go  installer.go
internal/providers/cloudflared/: cloudflared.go  installer.go
internal/providers/pinggy/: installer.go  pinggy.go
internal/providers/playit/: installer.go  playit.go
internal/shortener/: bitly.go  cache.go  isgd.go  multi.go  provider.go  rebrandly.go
internal/version/: version.go
internal/web/: handlers.go  handlers_logs.go  handlers_settings.go  handlers_status.go  handlers_tunnel.go  server.go  websocket.go
scripts/: build-web-assets.sh  bump-version.sh
web-svelte/: package-lock.json  package.json  svelte.config.js  vite.config.js  vitest.config.ts
web-svelte/src/: app.html
web-svelte/static/: themes.css
(+87 files in other folders)
