[package]
name = "ftm"
version = "0.0.1"
description = "Foundry Tunnel Manager desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "prtty_lib"
path = "src/lib.rs"

[[bin]]
name = "ftm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
