[package]
name = "ftm-desktop"
version = "0.4.0"
description = "Foundry Tunnel Manager - Desktop App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "ftm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
ureq = "2"
